--- a/app/src/main/res/layout/coming_list_row.xml
+++ b/app/src/main/res/layout/coming_list_row.xml
@@ -2,9 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/comingList"
     android:layout_width="wrap_content"
-    android:layout_margin="6dp"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_margin="6dp">
 
 
     <ImageView
