--- a/app/src/main/res/layout/film_list_row.xml
+++ b/app/src/main/res/layout/film_list_row.xml
@@ -2,9 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/filmList"
     android:layout_width="wrap_content"
-    android:layout_margin="6dp"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_margin="6dp">
 
     <ImageView
         android:id="@+id/imageView3"
@@ -27,7 +28,7 @@
         android:lines="2"
         android:maxLines="2"
         android:text="TextView"
-       android:textAlignment="center"
+        android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="@+id/imageView3"
